// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calendar render render render correctly 1`] = `
<div
  class="rc-calendar"
  tabindex="0"
>
  <div
    class="rc-calendar-panel"
  >
    <div
      class="rc-calendar-input-wrap"
    >
      <div
        class="rc-calendar-date-input-wrap"
      >
        <input
          class="rc-calendar-input "
          value=""
        />
      </div>
      <a
        class="rc-calendar-clear-btn"
        role="button"
        title="清除"
      />
    </div>
    <div
      class="rc-calendar-date-panel"
    >
      <div
        class="rc-calendar-header"
      >
        <div
          style="position:relative;"
        >
          <a
            class="rc-calendar-prev-year-btn"
            role="button"
            title="上一年 (Control键加左方向键)"
          />
          <a
            class="rc-calendar-prev-month-btn"
            role="button"
            title="上个月 (翻页上键)"
          />
          <span
            class="rc-calendar-ym-select"
          >
            <a
              class="rc-calendar-year-select"
              role="button"
              title="选择年份"
            >
              2017年
            </a>
            <a
              class="rc-calendar-month-select"
              role="button"
              title="选择月份"
            >
              三月
            </a>
          </span>
          <a
            class="rc-calendar-next-month-btn"
            title="下个月 (翻页下键)"
          />
          <a
            class="rc-calendar-next-year-btn"
            title="下一年 (Control键加右方向键)"
          />
        </div>
      </div>
      <div
        class="rc-calendar-body"
      >
        <table
          cellspacing="0"
          class="rc-calendar-table"
          role="grid"
        >
          <thead>
            <tr
              role="row"
            >
              <th
                class="rc-calendar-column-header"
                role="columnheader"
                title="周一"
              >
                <span
                  class="rc-calendar-column-header-inner"
                >
                  一
                </span>
              </th>
              <th
                class="rc-calendar-column-header"
                role="columnheader"
                title="周二"
              >
                <span
                  class="rc-calendar-column-header-inner"
                >
                  二
                </span>
              </th>
              <th
                class="rc-calendar-column-header"
                role="columnheader"
                title="周三"
              >
                <span
                  class="rc-calendar-column-header-inner"
                >
                  三
                </span>
              </th>
              <th
                class="rc-calendar-column-header"
                role="columnheader"
                title="周四"
              >
                <span
                  class="rc-calendar-column-header-inner"
                >
                  四
                </span>
              </th>
              <th
                class="rc-calendar-column-header"
                role="columnheader"
                title="周五"
              >
                <span
                  class="rc-calendar-column-header-inner"
                >
                  五
                </span>
              </th>
              <th
                class="rc-calendar-column-header"
                role="columnheader"
                title="周六"
              >
                <span
                  class="rc-calendar-column-header-inner"
                >
                  六
                </span>
              </th>
              <th
                class="rc-calendar-column-header"
                role="columnheader"
                title="周日"
              >
                <span
                  class="rc-calendar-column-header-inner"
                >
                  日
                </span>
              </th>
            </tr>
          </thead>
          <tbody
            class="rc-calendar-tbody"
          >
            <tr
              class=""
              role="row"
            >
              <td
                class="rc-calendar-cell rc-calendar-last-month-cell"
                role="gridcell"
                title="2017-2-27"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  27
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-last-month-cell"
                role="gridcell"
                title="2017-2-28"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  28
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-1"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  1
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-2"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  2
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-3"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  3
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-4"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  4
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-5"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  5
                </div>
              </td>
            </tr>
            <tr
              class=""
              role="row"
            >
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-6"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  6
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-7"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  7
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-8"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  8
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-9"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  9
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-10"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  10
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-11"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  11
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-12"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  12
                </div>
              </td>
            </tr>
            <tr
              class=""
              role="row"
            >
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-13"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  13
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-14"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  14
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-15"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  15
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-16"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  16
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-17"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  17
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-18"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  18
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-19"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  19
                </div>
              </td>
            </tr>
            <tr
              class=""
              role="row"
            >
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-20"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  20
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-21"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  21
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-22"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  22
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-23"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  23
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-24"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  24
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-25"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  25
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-26"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  26
                </div>
              </td>
            </tr>
            <tr
              class="rc-calendar-current-week rc-calendar-active-week"
              role="row"
            >
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-27"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  27
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-28"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  28
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-today rc-calendar-selected-day"
                role="gridcell"
                title="2017-3-29"
              >
                <div
                  aria-disabled="false"
                  aria-selected="true"
                  class="rc-calendar-date"
                >
                  29
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-30"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  30
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-31"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  31
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-next-month-btn-day"
                role="gridcell"
                title="2017-4-1"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  1
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-next-month-btn-day"
                role="gridcell"
                title="2017-4-2"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  2
                </div>
              </td>
            </tr>
            <tr
              class=""
              role="row"
            >
              <td
                class="rc-calendar-cell rc-calendar-next-month-btn-day"
                role="gridcell"
                title="2017-4-3"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  3
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-next-month-btn-day"
                role="gridcell"
                title="2017-4-4"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  4
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-next-month-btn-day"
                role="gridcell"
                title="2017-4-5"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  5
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-next-month-btn-day"
                role="gridcell"
                title="2017-4-6"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  6
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-next-month-btn-day"
                role="gridcell"
                title="2017-4-7"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  7
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-next-month-btn-day"
                role="gridcell"
                title="2017-4-8"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  8
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-next-month-btn-day"
                role="gridcell"
                title="2017-4-9"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  9
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="rc-calendar-footer"
      >
        <span
          class="rc-calendar-footer-btn"
        >
          <a
            class="rc-calendar-today-btn "
            role="button"
            title="2017-3-29"
          >
            今天
          </a>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Calendar render render render correctly 2`] = `
<div
  class="rc-calendar"
  tabindex="0"
>
  <div
    class="rc-calendar-panel"
  >
    <div
      class="rc-calendar-input-wrap"
    >
      <div
        class="rc-calendar-date-input-wrap"
      >
        <input
          class="rc-calendar-input "
          value=""
        />
      </div>
      <a
        class="rc-calendar-clear-btn"
        role="button"
        title="Clear"
      />
    </div>
    <div
      class="rc-calendar-date-panel"
    >
      <div
        class="rc-calendar-header"
      >
        <div
          style="position:relative;"
        >
          <a
            class="rc-calendar-prev-year-btn"
            role="button"
            title="Last year (Control + left)"
          />
          <a
            class="rc-calendar-prev-month-btn"
            role="button"
            title="Previous month (PageUp)"
          />
          <span
            class="rc-calendar-my-select"
          >
            <a
              class="rc-calendar-month-select"
              role="button"
              title="Choose a month"
            >
              March
            </a>
            <a
              class="rc-calendar-year-select"
              role="button"
              title="Choose a year"
            >
              2017
            </a>
          </span>
          <a
            class="rc-calendar-next-month-btn"
            title="Next month (PageDown)"
          />
          <a
            class="rc-calendar-next-year-btn"
            title="Next year (Control + right)"
          />
        </div>
      </div>
      <div
        class="rc-calendar-body"
      >
        <table
          cellspacing="0"
          class="rc-calendar-table"
          role="grid"
        >
          <thead>
            <tr
              role="row"
            >
              <th
                class="rc-calendar-column-header"
                role="columnheader"
                title="Sun"
              >
                <span
                  class="rc-calendar-column-header-inner"
                >
                  Su
                </span>
              </th>
              <th
                class="rc-calendar-column-header"
                role="columnheader"
                title="Mon"
              >
                <span
                  class="rc-calendar-column-header-inner"
                >
                  Mo
                </span>
              </th>
              <th
                class="rc-calendar-column-header"
                role="columnheader"
                title="Tue"
              >
                <span
                  class="rc-calendar-column-header-inner"
                >
                  Tu
                </span>
              </th>
              <th
                class="rc-calendar-column-header"
                role="columnheader"
                title="Wed"
              >
                <span
                  class="rc-calendar-column-header-inner"
                >
                  We
                </span>
              </th>
              <th
                class="rc-calendar-column-header"
                role="columnheader"
                title="Thu"
              >
                <span
                  class="rc-calendar-column-header-inner"
                >
                  Th
                </span>
              </th>
              <th
                class="rc-calendar-column-header"
                role="columnheader"
                title="Fri"
              >
                <span
                  class="rc-calendar-column-header-inner"
                >
                  Fr
                </span>
              </th>
              <th
                class="rc-calendar-column-header"
                role="columnheader"
                title="Sat"
              >
                <span
                  class="rc-calendar-column-header-inner"
                >
                  Sa
                </span>
              </th>
            </tr>
          </thead>
          <tbody
            class="rc-calendar-tbody"
          >
            <tr
              class=""
              role="row"
            >
              <td
                class="rc-calendar-cell rc-calendar-last-month-cell"
                role="gridcell"
                title="2017-2-26"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  26
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-last-month-cell"
                role="gridcell"
                title="2017-2-27"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  27
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-last-month-cell"
                role="gridcell"
                title="2017-2-28"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  28
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-1"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  1
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-2"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  2
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-3"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  3
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-4"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  4
                </div>
              </td>
            </tr>
            <tr
              class=""
              role="row"
            >
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-5"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  5
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-6"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  6
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-7"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  7
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-8"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  8
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-9"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  9
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-10"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  10
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-11"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  11
                </div>
              </td>
            </tr>
            <tr
              class=""
              role="row"
            >
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-12"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  12
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-13"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  13
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-14"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  14
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-15"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  15
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-16"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  16
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-17"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  17
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-18"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  18
                </div>
              </td>
            </tr>
            <tr
              class=""
              role="row"
            >
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-19"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  19
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-20"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  20
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-21"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  21
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-22"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  22
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-23"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  23
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-24"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  24
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-25"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  25
                </div>
              </td>
            </tr>
            <tr
              class="rc-calendar-current-week rc-calendar-active-week"
              role="row"
            >
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-26"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  26
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-27"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  27
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-28"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  28
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-today rc-calendar-selected-day"
                role="gridcell"
                title="2017-3-29"
              >
                <div
                  aria-disabled="false"
                  aria-selected="true"
                  class="rc-calendar-date"
                >
                  29
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-30"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  30
                </div>
              </td>
              <td
                class="rc-calendar-cell"
                role="gridcell"
                title="2017-3-31"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  31
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-next-month-btn-day"
                role="gridcell"
                title="2017-4-1"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  1
                </div>
              </td>
            </tr>
            <tr
              class=""
              role="row"
            >
              <td
                class="rc-calendar-cell rc-calendar-next-month-btn-day"
                role="gridcell"
                title="2017-4-2"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  2
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-next-month-btn-day"
                role="gridcell"
                title="2017-4-3"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  3
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-next-month-btn-day"
                role="gridcell"
                title="2017-4-4"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  4
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-next-month-btn-day"
                role="gridcell"
                title="2017-4-5"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  5
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-next-month-btn-day"
                role="gridcell"
                title="2017-4-6"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  6
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-next-month-btn-day"
                role="gridcell"
                title="2017-4-7"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  7
                </div>
              </td>
              <td
                class="rc-calendar-cell rc-calendar-next-month-btn-day"
                role="gridcell"
                title="2017-4-8"
              >
                <div
                  aria-disabled="false"
                  aria-selected="false"
                  class="rc-calendar-date"
                >
                  8
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="rc-calendar-footer"
      >
        <span
          class="rc-calendar-footer-btn"
        >
          <a
            class="rc-calendar-today-btn "
            role="button"
            title="2017-3-29"
          >
            Today
          </a>
        </span>
      </div>
    </div>
  </div>
</div>
`;
